# ocaml-signal

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project
exe/: dune  main.ml
lib/: .ocamlformat
lib/api/: dune  event.ml  event.mli  method.ml  method.mli  signal_api.ml  signal_api.mli
lib/api/dbus/: dune  signal.xml.patch  signal.xml.unpatched
lib/bot/: action.ml  action.mli  dune  hook.ml  hook.mli  signal_bot.ml  signal_bot.mli
lib/signal/: conversation.ml  dune  message.ml  signal.ml
lib/signal/dbus/: dune  signal_dbus.mli
lib/signal/dbus/ppx/: dune  signal_dbus_patch.ml
