(library
 (name signal_dbus)
 (flags -w -33)
 (public_name signal.api.dbus)
 (libraries obus))

(rule
 (target signal.xml.upstream)
 (action
  (with-stdout-to
   signal.xml.upstream
   (run obus-introspect org.asamk.Signal /org/asamk/Signal))))

(rule
 (alias dbus-check)
 (action
  (diff signal.xml.unpatched signal.xml.upstream)))

(rule
 (target signal.xml)
 (deps signal.xml.unpatched signal.xml.patch)
 (action
  (progn
   (copy signal.xml.unpatched signal.xml)
   (run patch --verbose -u signal.xml signal.xml.patch))))

(rule
 (deps signal.xml)
 (targets signal_interfaces.ml signal_interfaces.mli)
 (action
  (run obus-gen-interface signal.xml)))

(rule
 (deps signal.xml)
 (targets signal_client.ml signal_client.mli)
 (action
  (run obus-gen-client signal.xml)))
